--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,9 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
+            android:label="@string/app_name"
+            android:configChanges="orientation|screenSize">
+        <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -21,11 +22,13 @@
         </activity>
         <activity
             android:name=".CardsActivity"
-            android:label="@string/title_activity_cards" >
+            android:label="@string/title_activity_cards"
+            android:configChanges="orientation|screenSize">
         </activity>
         <activity
             android:name=".InfoCard"
-            android:label="@string/title_activity_info_card" >
+            android:label="@string/title_activity_info_card"
+            android:configChanges="orientation|screenSize">
         </activity>
     </application>
 
