--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:configChanges="orientation|screenSize">
-        <intent-filter>
+            android:label="@string/app_name" >
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -22,13 +21,11 @@
         </activity>
         <activity
             android:name=".CardsActivity"
-            android:label="@string/title_activity_cards"
-            android:configChanges="orientation|screenSize">
+            android:label="@string/title_activity_cards" >
         </activity>
         <activity
             android:name=".InfoCard"
-            android:label="@string/title_activity_info_card"
-            android:configChanges="orientation|screenSize">
+            android:label="@string/title_activity_info_card" >
         </activity>
     </application>
 
