--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_itgslogo"
+        android:icon="@mipmap/ic_itgs_prep"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
